# robot-blackbox

./: .gitignore  README.md  pyproject.toml
blackbox/: __init__.py  cli.py  clustering.py  metrics.py  recorder.py  report.py  schema.py  sim.py
paper/: README.md  paper.tex  references.bib
tests/: test_pipeline.py
